# res_packer

./: .gitignore  CMakeLists.txt  Gui.cpp  Gui.h  Pack.cpp  Pack.h  Packer-stream.cpp  Packer.cpp  Packer.h  PackerConfig.h  PakTypes.h  Paths.h  Theme.h  Unpacker.cpp  Unpacker.h  Utils.h  Version.h  Version.h.in  Widgets.h  main-dx11.cpp  main.cpp  resources.res  ui.h  vcpkg.json  version.rc
FileBrowser/: ImGuiFileBrowser.cpp  ImGuiFileBrowser.h
imgui/: CMakeLists.txt
